Kubernetes/QRCodeGenerator/yamls/qr-code-generator.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: qr-code-generator
---
apiVersion: v1
kind: Service
metadata:
  name: qr-code-generator
  namespace: qr-code-generator
  labels:
    app: qr-code-generator
spec:
  type: ClusterIP
  sessionAffinity: ClientIP
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 3600
  ports:
  - name: http
    port: 80
  selector:
    app: qr-code-generator
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: qr-code-generator
  namespace: qr-code-generator
  labels:
    app: qr-code-generator        
    app.kubernetes.io/name: qr-code-generator
spec:
  replicas: 1
  selector:
    matchLabels:
      app: qr-code-generator
  template:
    metadata:
      labels:
        app: qr-code-generator        
        app.kubernetes.io/name: qr-code-generator
    spec:
      containers:
      - image: bizzycolah/qrcode-generator:latest
        imagePullPolicy: IfNotPresent
        name: qr-code-generator
        ports:
        - containerPort: 80
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: traefik-qr-code-generator-security
  namespace: qr-code-generator
spec:
  headers:
    sslRedirect: true
    browserXssFilter: true
    contentTypeNosniff: true
    stsIncludeSubdomains: true
    stsPreload: true
    stsSeconds: 31536000
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-qr-code-generator-websecure
  namespace: qr-code-generator
  annotations:
    gethomepage.dev/href: "https://qr-code-generator.domain.com"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/description: "QR Code Generator"
    gethomepage.dev/group: Office
    gethomepage.dev/icon: barcodebuddy.png
    gethomepage.dev/app: qr-code-generator # optional, may be needed if app.kubernetes.io/name != ingress metadata.name
    gethomepage.dev/name: "QR Code Generator"
    #gethomepage.dev/showStats: "true"
    #gethomepage.dev/widget.type: "emby"
    #gethomepage.dev/widget.url: "https://emby.example.com"
    #gethomepage.dev/pod-selector: ""
    #gethomepage.dev/weight: 10 # optional
    #gethomepage.dev/instance: "public" # optional 
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`qr-code-generator.domain.com`)
      services:
        - name: qr-code-generator
          port: 80
          serversTransport: traefik-qr-code-generator-transport
      middlewares:
        - name: traefik-qr-code-generator-security
  tls:
    secretName: qr-code-generator-domain-com
    options:
      name: traefik-qr-code-generator-tlsoptions
